<resources>
    <string name="app_name">CodingInFlowRecycler</string>
    <string name="like">Like:</string>
    <string name="creator_name">Creator Name</string>
    <string name="back">back</string>
    <string name="next">next</string>
    <string name="id">Id</string>
    <string name="title">Title</string>
    <string name="body">body</string>
    <string name="borrar">Borrar</string>
    <string name="volver">Volver</string>
    <string name="_11_01_2018">11/01/2018</string>
    <string name="_80">80</string>
    <string name="peso_inicial">PESO INICIAL</string>
    <string name="_01_01_2017">01/01/2017</string>
    <string name="_70kg">70Kg</string>
    <string name="_7kg">+7Kg</string>
    <string name="tu_objetivo_son_67_kg">Tu Objetivo son 67 Kg</string>
    <string name="android">Android</string>
</resources>
