<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:id="@+id/rlLista"
    android:layout_marginRight="16dp"
    android:layout_marginLeft="16dp"
    android:layout_marginTop="16dp"
    android:layout_marginBottom="16dp"
    android:layout_width="match_parent"
    android:layout_height="200dp">

    <TextView
        android:layout_above="@+id/tv_date"
        android:layout_centerHorizontal="true"
        android:textStyle="bold"
        android:textSize="25sp"
        android:textColor="@color/negativo"
        android:layout_marginBottom="30dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/peso_inicial"/>

    <TextView
        android:id="@+id/tv_date"
        android:layout_alignParentStart="true"
        android:layout_centerInParent="true"
        android:textColor="@color/igual"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_01_01_2017"/>


    <TextView
        android:id="@+id/tv_weight"
        android:textSize="40sp"
        android:layout_centerInParent="true"
        android:textStyle="bold"
        android:textColor="@color/colorPrimaryDark"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_70kg"/>

    <TextView
        android:id="@id/tv_difference"
        android:layout_alignParentEnd="true"
        android:layout_centerInParent="true"
        android:textColor="@color/positivo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_7kg"/>

    <TextView
        android:layout_below="@id/tv_difference"
        android:layout_centerInParent="true"
        android:layout_marginTop="30dp"
        android:textColor="@color/igual"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tu_objetivo_son_67_kg"/>
</RelativeLayout>