<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:id="@+id/rlLista"
    android:layout_marginRight="16dp"
    android:layout_marginLeft="16dp"
    android:layout_marginTop="16dp"
    android:layout_marginBottom="16dp"
    android:layout_width="match_parent"
    android:layout_height="40dp">
    <TextView
        android:id="@+id/tv_date"
        android:layout_alignParentStart="true"
        android:layout_centerInParent="true"
        android:textColor="@color/igual"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_01_01_2017"/>

    <TextView
        android:id="@+id/tv_weight"
        android:layout_centerHorizontal="true"
        android:layout_centerInParent="true"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/colorPrimaryDark"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_70kg"/>

    <TextView
        android:id="@+id/tv_difference"
        android:layout_alignParentEnd="true"
        android:layout_centerInParent="true"
        android:textColor="@color/positivo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_7kg"/>

</RelativeLayout>